# novasre

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py
backend/app/agents/: __init__.py  frontend_agent.py  graph.py  k8s_agent.py  logs_agent.py  metrics_agent.py  planner.py  profiles_agent.py  state.py  synthesizer.py  traces_agent.py
backend/app/anomaly/: __init__.py  changepoint.py  engine.py  prophet_detector.py  zscore.py
backend/app/api/: __init__.py  router.py  websocket.py
backend/app/api/v1/: __init__.py  alerts.py  chat.py  health.py  incidents.py  investigations.py  knowledge.py
backend/app/correlation/: __init__.py  engine.py  semantic.py  temporal.py  topological.py
backend/app/knowledge/: __init__.py  bm25.py  embeddings.py  ingestion.py  raptor.py  reranker.py
backend/app/models/: __init__.py  alert.py  base.py  incident.py  investigation.py  knowledge.py  service.py
backend/app/schemas/: __init__.py  agent.py  alert.py  incident.py  investigation.py
backend/app/services/: __init__.py  alert_service.py  incident_service.py  investigation_service.py  notification_service.py
backend/app/tools/: __init__.py  base.py  faro.py  grafana.py  kubernetes.py  loki.py  mimir.py  pyroscope.py  registry.py  tempo.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/test_agents/: __init__.py  test_graph.py  test_planner.py
backend/tests/test_api/: test_alerts.py  test_health.py  test_incidents.py
backend/tests/test_correlation/: __init__.py  test_engine.py
backend/tests/test_tools/: __init__.py  test_loki.py  test_mimir.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  routeTree.gen.ts
frontend/src/components/agent/: AgentChat.tsx  InvestigationPlan.tsx  ToolCallCard.tsx
frontend/src/components/alerts/: AlertFeed.tsx  AlertGroup.tsx
frontend/src/components/incidents/: IncidentCard.tsx  IncidentFeed.tsx
frontend/src/hooks/: useAgent.ts  useAlerts.ts  useIncidents.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  IncidentsPage.tsx  InvestigationPage.tsx  KnowledgePage.tsx  SettingsPage.tsx
frontend/src/routes/: index.tsx
frontend/src/store/: agentStore.ts  alertStore.ts  incidentStore.ts
k8s/: ingress.yaml  namespace.yaml
k8s/backend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
mcp-server/: Dockerfile  pyproject.toml  server.py
mcp-server/tools/: __init__.py  faro_tools.py  grafana_tools.py  loki_tools.py  mimir_tools.py  pyroscope_tools.py  tempo_tools.py
(+6 files in other folders)
