[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novasre-mcp-server"
version = "0.1.0"
description = "NovaSRE MCP Tool Server — exposes Grafana stack tools via Model Context Protocol"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NovaSRE", email = "novasre@your-org.com" },
]

dependencies = [
  # MCP
  "mcp>=1.0.0",

  # HTTP client (async)
  "httpx>=0.27.0",

  # Data validation
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",

  # Structured logging
  "structlog>=24.2.0",

  # Async utilities
  "anyio>=4.4.0",

  # FastAPI for the HTTP health endpoint
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "respx>=0.21.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
novasre-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
